# LLM-Project

./: .env  activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py  customer_chain.py  decision_agent.py  demo.ipynb  demo.py  finance_chain.py  groq_llm.py  ingest_to_sqlite.py  intent_chain.py  jsondiff  jsonpatch  jsonpointer  main_chain.py  pyproject.toml  pyvenv.cfg  run.py  schema.py  sql_tools.py
