[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "llm>=0.28",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.19.0",
]
